# wake_word_detection

./: CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c
